--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -1,26 +1,28 @@
 @font-face {
-    font-family: "marker";
-    src: url(../fonts/Marker/PermanentMarker-Regular.ttf);
+    font-family: "pat";
+    src: url(../fonts/PatrickHand/PatrickHand-Regular.ttf);
 }
 
 html {
     font-size: 10px;
     box-sizing: border-box;
-    font-family: marker;
 }
 
+ body {
+    font-family: pat;
+ }
+
 header {
-    font-size: 2rem;
+    font-size: 2.5rem;
     background-color: black;
     color: gray;
     display: grid;
     grid-template-columns: auto;
-    text-align: center;
     padding: 1.5rem;
 }
 
 .h1 {
-    font-size: 3.5rem;
+    font-size: 4rem;
 }
 
 ul > li {
@@ -28,7 +30,7 @@ ul > li {
 }
 
 body {
-    font-size: 1.6rem;
+    font-size: 2rem;
     background-color: darkslategray;
     color: white;
 }
