--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -22,11 +22,8 @@ header {
 }
 
 .h1 {
-    font-size: 4rem;
-}
-
-ul > li {
-    color: white;
+    font-size: 5rem;
+    text-align: left;
 }
 
 body {
@@ -35,14 +32,26 @@ body {
     color: white;
 }
 
-.container {
+.imgcontainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.imgcontainer > img {
+    margin-bottom: 10px;
 }
 
 form {
     padding: 1.5rem;
     margin: 2rem 1.5rem 2rem 1.5rem;
     text-align: center;
+}
+
+.error {
+    color: red;
+}
+
+@media screen and (max-width: 775px) {
+
 }
