--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -13,21 +13,20 @@ html {
  }
 
 header {
-    font-size: 2.5rem;
     background-color: black;
     color: gray;
     display: grid;
     grid-template-columns: auto;
-    padding: 1.5rem;
+    padding: 2.5rem;
 }
 
-.h1 {
-    font-size: 5rem;
+#title {
+    font-size: 3rem;
     text-align: left;
 }
 
 body {
-    font-size: 2rem;
+    font-size: 2.5rem;
     background-color: darkslategray;
     color: white;
 }
@@ -43,6 +42,7 @@ body {
 }
 
 form {
+    font-size: 2rem;
     padding: 1.5rem;
     margin: 2rem 1.5rem 2rem 1.5rem;
     text-align: center;
@@ -52,6 +52,16 @@ form {
     color: red;
 }
 
-@media screen and (max-width: 775px) {
+footer {
+    max-width: 100%;
+    height: auto;
+}
 
+.top {
+    margin-left: 2.5rem;
+    text-align: center;
+}
+
+.glogo {
+    margin-left: 2.5rem;
 }
