added media queries to scss

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -52,3 +52,11 @@ footer {
 
 .glogo {
   margin-left: 2.5rem; }
+
+@media screen and (max-width: 575px) {
+  header {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center; }
+  #title {
+    text-align: center; } }
