final edits to scripts and styles

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -48,7 +48,8 @@ footer {
 
 .top {
   margin-left: 2.5rem;
-  text-align: center; }
+  text-align: center;
+  margin-top: 1.5rem; }
 
 .glogo {
   margin-left: 2.5rem; }
