--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -60,10 +60,12 @@ footer {
 .top {
     margin-left: 2.5rem;
     text-align: center;
+    margin-top: 1.5rem;
 }
 
 .glogo {
     margin-left: 2.5rem;
+    margin-bottom: 1.5rem;
 }
 
 @media screen and (max-width: 575px) {
